tests/fail/ip6.rs
use const_addrs::ip6;

fn main() {
    let _ = ip6!("2001:db8::32::23");
}
