tests/fail/ip6.stderr
error: invalid IPv6 address syntax
 --> tests/fail/ip6.rs:4:18
  |
4 |     let _ = ip6!("2001:db8::32::23");
  |                  ^^^^^^^^^^^^^^^^^^
